@@ -1,3 +1,10 @@
+2011-11-05  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/wxterminal/wxt_gui.cpp src/wxterminal/wxt_gui.h
+	src/wxterminal/wxt_term.h term/wxt.trm:
+	Add support in wxt terminal for toggling individual plots on/off
+	by clicking on the corresponding key sample.
+
 2011-11-04  Ethan A Merritt  <merritt@u.washington.edu>
 
 	term/wxt.trm src/wxterminal/wxt_term.h src/wxterminal/wxt_gui.cpp:
